# upclink-vpn

./: .gitignore  CMakeLists.txt  README.md
backend/: upclink_security.py  upclink_vpn_service.py
helper/: upclink-plasma-control
legacy/: UPClink_VPN.desktop  upclink-vpn-tray.desktop  upclink-vpn-tray.py
packaging/dbus/: org.upclink.VPN.conf  org.upclink.VPN.service  org.upclink.VPN.service.in
packaging/keys/: RPM-GPG-KEY-Pep-Simo.asc
packaging/polkit/: org.upclink.vpn.policy
packaging/rpm/: post-install.sh  post-uninstall.sh  pre-install.sh  pre-uninstall.sh  sign-package.sh
packaging/systemd/: upclink-vpn.service  upclink-vpn.service.in
plasmoid/: metadata.json
plasmoid/contents/ui/: main.qml
plugin/: CMakeLists.txt  vpncontroller.cpp  vpncontroller.h
tests/: test_backend_security.py  test_backend_service.py
